changing my title name

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
             <span class="glyphicon glyphicon-list"></span>
             Menu
           </button>
-          <h1 class="site-title"> Michael Lin </h1>
+          <h1 class="site-title"> Michael A. Lin </h1>
         </div> <!-- navbar-header -->
 
         <div class="collapse navbar-collapse" id="collapse">
